# uav_tar

./: README.md  yolo_v5.launch
base_drone_control_frame-master/: README.md  note.md
base_drone_control_frame-master/devel/: .catkin  local_setup.sh  setup.sh
base_drone_control_frame-master/devel/lib/offboard/: autoarming_control  manual_offboard_control  position_control  pub_origin
base_drone_control_frame-master/devel/lib/pkgconfig/: offboard.pc
base_drone_control_frame-master/src/offboard/: CMakeLists.txt
base_drone_control_frame-master/src/offboard/launch/: autoarming_control.launch  manual_offboard_control.launch
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/src/: usb.tar
catkin_ws/src/yolo_tracking_control/: CMakeLists.txt
catkin_ws/src/yolo_tracking_control/include/yolo_tracking_control/: tracking_control.h
catkin_ws/src/yolo_tracking_control/launch/: tracking_control.launch  tracking_control_simulation.launch
catkin_ws/src/yolo_tracking_control/models/camera/: camera.sdf  model.config
catkin_ws/src/yolo_tracking_control/models/iris/: iris.sdf
catkin_ws/src/yolo_tracking_control/models/iris_with_camera/: camera.sdf  iris.sdf  model.config
catkin_ws/src/yolo_tracking_control/rviz/: tracking.rviz
catkin_ws/src/yolo_tracking_control/scripts/: check_model.py  run_simulation.sh  run_yolo.sh  spawn_camera.py  spawn_model.py  spawn_model_no_tf.py  yolo_v5.py
catkin_ws/src/yolo_tracking_control/src/: tracking_control_node.cpp
catkin_ws/src/yolo_tracking_control/urdf/: iris_camera.urdf.xacro
(+34 files in other folders)
